# quant-trading-mvp

./: .gitignore  BUGFIX_REPORT.md  CLEANUP_SUMMARY.md  ISSUE_ANALYSIS_REPORT.md  LIVE_TRADING_REPORT.md  MOVE_VERIFICATION.md  MVP_COMPLETION_REPORT.md  PRD-v2.md  PRD-v3.md  PRD.md  PROJECT_STATUS.md  QUICK_START.md  RALPH_PLAN.md  README.md  SYSTEM_LAUNCH_GUIDE.md  SYSTEM_STATUS_REPORT.md  analyze_au2606.py  backend_risk_executor_summary.md  bugfix_phase2_summary.md  check_au2604.py  check_au2606_data.py  check_au_main.py  check_data.py  check_data_detail.py  check_data_now.py  check_db.py  check_db_data.py  check_kline.py  check_klines.py  check_news_schema.py  check_symbols.py  check_tick.py  config.example.yaml  deep_analyze_au2606.py  enhanced_feature_training_summary.md  file_structure_step1_summary.md  file_structure_step2_summary.md  file_structure_step3_summary.md  fix_env.py  fix_interval.py  (+29 more)
.openclaw/: AGENTS.md  MEMORY.md  REDIS_INSTALLATION.md  SOUL.md  TOOLS.md  create_tables.sql  dual-track-memory.skill  iterative-review.skill  ralph-loop.skill  setup_macro.ps1  setup_task.ps1  setup_task2.ps1
dashboard/: app.py  requirements.txt  run.bat
data/: factor_discovery_log.jsonl
docs/: CODING_STANDARDS.md  CTP_DEPLOYMENT.md  CTP_IMPLEMENTATION_SUMMARY.md  CTP_MARKET_GUIDE.md  CTP账号配置.md  DATA_FLOW_ARCHITECTURE.md  FACTOR_AGENT_INSTRUCTIONS.md  INDEX.md  LLM_NEWS_P0_EXECUTION_PLAN.md  LLM_NEWS_PIPELINE_REFACTOR_PLAN.md  MACRO_COLLECTOR.md  ML_MODULE_GUIDE.md  NEWS_DATA_SOURCES.md  PROJECT_STRUCTURE.md  PostgreSQL降级指南.md  SCAFFOLDING.md  SKILL_SECURITY.md  (+8 more)
(+406 files in other folders)
