[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "quant-trading-mvp"
version = "0.1.0"
requires-python = ">=3.12"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

# 核心模块严格检查
[[tool.mypy.overrides]]
module = "quant.common.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "quant.risk_executor.*"
disallow_untyped_defs = true

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501", "N802", "N803", "N806"]
